# ChangeLog for sci-biology/mavid
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jul 2008; weaver <weaver@gentoo.org> +metadata.xml,
  +mavid-2.0.4.ebuild:
  New ebuild, bug 207250
