@@ -1,1 +1,1 @@
-DIST mavid-package-2.0.4.tar.gz 85863 SHA256 9cfb216635ba463e8cb6de4e5e661c9e9c6d408af50a449af018ebfd11cf896a
+DIST mavid-package-2.0.4.tar.gz 85863 SHA256 9cfb216635ba463e8cb6de4e5e661c9e9c6d408af50a449af018ebfd11cf896a SHA512 6c64e51df3069859bb0226efc078c488c0b5602e9fcd5fa7f596a29f07c279ccdfca580c947fbd4efdac66cbc86669f5d2388a68f3e861d45c8979d710e65e00 WHIRLPOOL 62e126071d687b855e7bac3099219ea1afe360cbec683b51fc86a65aa00de54d07c235fda22be587b075fe9c87fe088f04a6b6f0af533ceb03deddaab227d258
