@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/mavid
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Nov 2014; Justin Lecher <jlec@gentoo.org> mavid-2.0.4.ebuild,
+  metadata.xml:
+  Bump EAPI
 
   08 Jul 2008; weaver <weaver@gentoo.org> +metadata.xml,
   +mavid-2.0.4.ebuild:
